deploy/manifests/dev/us-east-2/tenant/storetheindex/dhstore-cluster/envoy/envoy-config.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
    - name: "envoy.resource_monitors.fixed_heap"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
        max_heap_size_bytes: 536870912 # 512 MiB
  actions:
    - name: "envoy.overload_actions.shrink_heap"
      triggers:
        - name: "envoy.resource_monitors.fixed_heap"
          threshold:
            value: 0.95
    - name: "envoy.overload_actions.stop_accepting_requests"
      triggers:
        - name: "envoy.resource_monitors.fixed_heap"
          threshold:
            value: 0.98
static_resources:
  listeners:
    - name: listener_8080
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 8080
      per_connection_buffer_limit_bytes: 32768 # 32 KiB
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                use_remote_address: true
                normalize_path: true
                merge_slashes: true
                path_with_escaped_slashes_action: UNESCAPE_AND_REDIRECT
                common_http_protocol_options:
                  idle_timeout: 3600s # 1 hour
                  headers_with_underscores_action: REJECT_REQUEST
                # L2 recommended setting.
                # See: https://www.envoyproxy.io/docs/envoy/latest/configuration/best_practices/level_two
                stream_error_on_invalid_http_message: true
                http2_protocol_options:
                  max_concurrent_streams: 100
                  initial_stream_window_size: 65536 # 64 KiB
                  initial_connection_window_size: 1048576 # 1 MiB
                stream_idle_timeout: 300s # 5 minutes
                request_timeout: 300s # 5 minutes
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: dhstore_service
                            timeout: 60s
                            hash_policy:
                              - header:
                                  # The header must be added by the downstream intermediate services. More explicitly,
                                  # the key must be either a multihash or metadata key.
                                  header_name: "x-ipni-dhstore-shard-key"
                            retry_policy:
                              retry_on: "cancelled,deadline-exceeded,internal,connect-failure,gateway-error,refused-stream,resource-exhausted,unavailable"
                              num_retries: 3
                              host_selection_retry_max_attempts: 3
                              per_try_timeout: 5s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: dhstore_service
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      connect_timeout: 0.25s
      per_connection_buffer_limit_bytes: 32768 # 32 KiB
      lb_policy: MAGLEV
      maglev_lb_config:
        # Must be a prime number with maximum value of 5000011
        # See: https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/cluster/v3/cluster.proto#envoy-v3-api-msg-config-cluster-v3-cluster-maglevlbconfig
        table_size: 65537
      common_lb_config:
        consistent_hashing_lb_config:
          use_hostname_for_hashing: true
      load_assignment:
        cluster_name: dhstore_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: cadi-dhstore
                      port_value: 40080
              - endpoint:
                  address:
                    socket_address:
                      address: aada-dhstore
                      port_value: 40080
              - endpoint:
                  address:
                    socket_address:
                      address: saar-dhstore
                      port_value: 40080
              - endpoint:
                  address:
                    socket_address:
                      address: aviv-dhstore
                      port_value: 40080
              - endpoint:
                  address:
                    socket_address:
                      address: dina-dhstore
                      port_value: 40080
              - endpoint:
                  address:
                    socket_address:
                      address: vesa-dhstore
                      port_value: 40080
              - endpoint:
                  address:
                    socket_address:
                      address: bala-dhstore
                      port_value: 40080
              - endpoint:
                  address:
                    socket_address:
                      address: maja-dhstore
                      port_value: 40080
              - endpoint:
                  address:
                    socket_address:
                      address: zora-dhstore
                      port_value: 40080
layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        envoy:
          resource_limits:
            listener:
              listener_8080:
                connection_limit: 10000
        overload:
          global_downstream_max_connections: 50000
