deploy/manifests/dev/us-east-2/tenant/storetheindex/dhstore-cluster/envoy/envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
spec:
  template:
    spec:
      containers:
        - name: envoy
          resources:
            requests:
              cpu: "2"
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 1Gi
