deploy/manifests/dev/us-east-2/tenant/storetheindex/dhstore-cluster/envoy/envoy-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dhstore-cluster-envoy
  labels:
    app: envoy
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: envoy
